# Ultimate-backend---Rust

./: .env  Cargo.toml  ReadMe.md
activity_log/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/routes/: auth.rs  ledger.rs  notification.rs  organization.rs  transactions.rs
crates/app_chat/: Cargo.toml
crates/app_notes/: Cargo.toml
crates/app_task/: Cargo.toml
crates/app_task/src/: comment.rs  lib.rs  story.rs  tasks.rs
crates/auth/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: env.rs  lib.rs
crates/config/src/errors/: mod.rs  notification.rs  user.rs
crates/config/src/queue/: consumer.rs  mod.rs  producer.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/notes/: components_form.rs  mod.rs  notes.rs
crates/core/src/task/: comment.rs  epic.rs  mod.rs  tasks.rs
crates/log/: Cargo.toml
crates/messenger/: Cargo.toml
crates/messenger/src/: lib.rs
crates/messenger/src/queue/: producer.rs  topics.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs  main.rs
crates/notify/src/consumer/: process.rs
crates/notify/src/parties/: mod.rs  twilo.rs
crates/service_auth/: Cargo.toml
crates/service_gateway/: Cargo.toml
crates/service_gateway/src/routes/: mod.rs  notification.rs  payments.rs  utils.rs
crates/service_ledger/: Cargo.toml
crates/service_notify/: Cargo.toml
crates/service_notify/src/: lib.rs  model.rs
crates/service_payment/: Cargo.toml
crates/service_proto/: Cargo.toml
crates/service_user/: Cargo.toml
crates/utils/: Cargo.toml
docs/: kafka.md
src/: main.rs
src/api/: task.rs
src/routes/: mod.rs  notification.rs  payments.rs  user.rs  utils.rs
