[package]
name = "ultimate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
uuid = {version = "1.4.1", features = ["v4"]}
serde = {version = "^1" , features = ["derive"]}
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
log= "0.4.20"
strum_macros = "0.25.2"
strum = {version = "0.25.0" , features = ["derive"]}
derive_more = "0.99.17"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls"]}
dotenvy = "0.15.6"
chrono = "0.4"
jsonwebtoken = "8.2.0"
argon_hash_password = "0.1.0"
tokio = { version = "1.24.1", features = ["full"] }