[workspace]
resolver = "2"
members = ["crates/*"]
package.edition = "2021"
package.license = "Apache-2.0"


[profile.release]
strip = true
lto = true
codegen-units = 1

resolver = "2"

exclude = [
        "examples",
        "scripts",
]

[profile.bench]
debug = true

[workspace.dependencies]
actix-web = "4.4.0"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
argon_hash_password = "0.1.0"
chrono = "0.4"
derive_more = "0.99.17"
dotenvy = "0.15.6"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
futures = {version= "0.3.28", features = ["async-await"], default-features = false}
jsonwebtoken = "8.2.0"
log= "0.4.20"
rdkafka = "0.34.0"
kafka = "0.10.0"
strum_macros = "0.25.2"
strum = {version = "0.25.0" , features = ["derive"]}
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls"]}
serde = {version = "^1" , features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.24.1", features = ["full"] }
uuid = {version = "1.4.1", features = ["v4"]}
econf = "0.2.1"
notify = "6.0"
openssl = { version = "0.10", features = ["v110"] }

service_gateway = {version = "0.1.0", path = "./crates/app" }
service_config = {version = "0.1.0", path = "./crates/config" }
service_core = {version = "0.1.0", path = "./crates/core" }
service_notify = {version = "0.1.0", path = "./crates/notify" }


