[package]
name = "AppGateway"
version = "0.1.0"
authors = ["Eligbue Felix <philixbob.com>"]
description = "A rust backend setup for startups"
readme = "README.md"
edition.workspace = true
license.workspace = true


[dependencies]
actix-web = {version="4.4.0" }
serde = {version = "^1" , features = ["derive"]}

[dev-dependencies]