[package]
name = "service_gateway"
version = "0.1.0"
authors = ["Eligbue Felix <philixbob.com>"]
description = "A rust backend setup for startups"
readme = "README.md"
edition.workspace = true
license.workspace = true


[dependencies]
actix-web = {workspace = true }
serde = {workspace = true}
futures = {workspace = true}
rdkafka = {workspace = true, features = ["ssl", "sasl"] }
kafka = {workspace = true}
tokio = {workspace = true}
serde_json  = {workspace = true}

service_config = {workspace = true}
service_messenger = {workspace = true}


