[package]
name = "AppConfig"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["Eligbue Felix <philixbob.com>"]
description = "A rust backend setup for startups"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
dotenvy = "0.15"
econf = "0.2.1"
notify = "6.0"
json_dotpath = "1.1"
convert_case = "0.6"
async-trait = { version = "0.1" }

tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }
async-std = { version = "1.12", optional = true }

serde_yaml = { workspace = true, optional = true }
ron = { version ="0.8", optional = true }
toml = { version = "0.7", optional = true }


[dev-dependencies]
tokio-test = "0.4"
envmnt = "0.10.4"
