[package]
name = "service_messenger"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = {version= "0.3.28", features = ["async-await"], default-features = false}
rdkafka = {workspace = true}
kafka = {workspace = true}
tokio = {workspace = true}

service_config = {workspace = true}