[package]
name = "service_notify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["Eligbue Felix <philixbob.com>"]
description = "A rust backend setup for startups"
readme = "README.md"




[dependencies]
actix-web = {workspace = true }
serde = {workspace = true}
futures = {workspace = true}
rdkafka = {workspace = true}
kafka = {workspace = true}
tokio = {workspace = true}
serde_json  = {workspace = true}

service_config = {workspace = true}
service_messenger = {workspace = true}
